# python-api

./: .gitignore  .pylintrc  aerich.ini  build-docs.sh  clean.sql  config.schema.json  main.py  pyproject.toml  reset-db.sh
.github/workflows/: lint.yml  python.yml
docs/: index.html
docs/reference/: config.html  constants.html  index.html
docs/reference/actions/: index.html  user.html
docs/reference/helpers/: demo.html  dependencies.html  exceptions.html  index.html  security.html  utils.html
docs/reference/routers/: auth.html  index.html  roles.html  service.html  user.html
docs/reference/schemas/: api.html  index.html  models.html  schemas.html
shopapi/: config.py  constants.py
shopapi/actions/: __init__.py  base.py  category.py  role.py  tag.py  user.py
shopapi/helpers/: demo.py  dependencies.py  exceptions.py  security.py  utils.py
shopapi/routers/: __init__.py  auth.py  category.py  role.py  roles.py  service.py  tag.py  user.py
shopapi/schemas/: __init__.py  api.py  base.py  models.py  schemas.py
